removed grid printing while setting fires

--- a/cmpsc472Project2.ipynb
+++ b/cmpsc472Project2.ipynb
@@ -177,6 +177,7 @@
         "}\n",
         "\n",
         "// Prints out the entire landscape array.\n",
+        "\n",
         "void printLandscape(struct Landscape *landscape) {\n",
         "  for (int i = 0; i < landscape->rows; i++) {\n",
         "    for (int j = 0; j < landscape->columns; j++) {\n",
@@ -872,9 +873,11 @@
         "  for (int j = 0; j < numOfFires; j++) {\n",
         "    // Stores attributes (row, col, , number of required resources) about the fire in jth element of Fire struct array.\n",
         "    fires[j] = setFire(landscape);\n",
-        "    printLandscape(landscape);\n",
         "    printf(\"\\n\");\n",
         "  }\n",
+        "\n",
+        "  printf(\"\\nFires set\\n\");\n",
+        "  printLandscape(landscape);\n",
         "\n",
         "  // Now that all fires are set, create a child process to search for fires\n",
         "  pid_t child_pid = fork();\n",
@@ -1082,7 +1085,7 @@
         "id": "4HHGtrnGg86s",
         "outputId": "fcf89510-6c00-405c-8fb7-dc7d7ac63912"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1107,7 +1110,7 @@
         "id": "uwJy7T6riA0U",
         "outputId": "8c50e2b5-2078-4864-8606-8d398b21ff53"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
